objects/CS_PRM_MinFileOrder__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FileName__c</fullName>
        <description>File Name with folder</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinResID__c</fullName>
        <label>Minified Resource ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNo__c</fullName>
        <label>Order Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResourceName__c</fullName>
        <label>Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetFileName__c</fullName>
        <description>Merged File Name</description>
        <label>Target File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>File Type</description>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>PRM Minification File Order</label>
</CustomObject>